chore: fixing typos, adding comments, changing some methods, etc.